# Scrivai_lhz

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
agents/: auditor.yaml  extractor.yaml  generator.yaml
core/: __init__.py  project.py
core/audit/: engine.py
docs/: TD.md  architecture.md  design.md  sdk_design.md
examples/: 01_audit_single_doc.py  02_generate_with_revision.py  03_evolve_skill_workflow.py  project.yaml
examples/data/: checkpoints.json  maintenance_report.md  seed_demo_feedback.py  simple_template.py
scripts/: verify_m3a_release.sh
scrivai/: __init__.py
scrivai/agents/: auditor.py  extractor.py  extractor.yaml  generator.py  generator.yaml
scrivai/evolution/: __init__.py  evaluator.py  proposer.py  runner.py  store.py  trigger.py
scrivai/io/: __init__.py  convert.py  render.py
scrivai/knowledge/: __init__.py  base.py  cases.py  factory.py  rules.py  store.py  templates.py
scrivai/models/: __init__.py  evolution.py  pes.py
scrivai/pes/: base.py  hooks.py
scrivai/utils/: __init__.py  json_repair.py
skills/available-tools/: SKILL.md
skills/inspect-document/: SKILL.md
skills/render-output/: SKILL.md
skills/search-knowledge/: SKILL.md
tests/: conftest.py
tests/contract/: test_agent_profiles.py  test_evolution_evaluator.py  test_evolution_models.py  test_evolution_store.py  test_extractor_pes.py  test_generator_pes.py  test_hooks.py  test_io_smoke.py  test_libraries.py  test_models.py  test_public_api.py  test_skill_isolation.py
tests/unit/: test_json_repair.py  test_llm.py  test_project.py  (+1 more)
(+4 files in other folders)
